// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default date time picker 1`] = `
<TimeClarification
  disabled={false}
  isOffsetButtonHidden={true}
  isOpen={true}
  onDaylightSavingButtonClick={[MockFunction]}
  onOffsetButtonClick={[MockFunction]}
  onRequestClose={[MockFunction]}
  onStandardTimeButtonClick={[MockFunction]}
  releaseFocus={[MockFunction]}
  requestFocus={[MockFunction]}
/>
`;

exports[`should render a disabled time clarification 1`] = `
<TimeClarification
  disabled={true}
  isOffsetButtonHidden={true}
  isOpen={true}
  onDaylightSavingButtonClick={[MockFunction]}
  onOffsetButtonClick={[MockFunction]}
  onRequestClose={[MockFunction]}
  onStandardTimeButtonClick={[MockFunction]}
  releaseFocus={[MockFunction]}
  requestFocus={[MockFunction]}
/>
`;
